--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=./index.html" />
+    <meta charset="utf-8" />
+    <title>Redirecting...</title>
+    <script type="text/javascript">
+      var path = window.location.pathname + window.location.search + window.location.hash;
+      window.location.replace("/USC-KSEA-Website/index.html?redirect=" + encodeURIComponent(path));
+    </script>
   </head>
   <body></body>
 </html>
